# full-stack-process-management-example

./: .pre-commit-config.yaml  README.md
backend/: .gitignore  pyproject.toml
backend/backend/: cli.py  main.py  server.py
backend/backend/db/: __init__.py
backend/backend/models/: __init__.py  attachement.py  attachment.py  event.py  link.py  process.py
backend/backend/routers/processes/: __init__.py  router.py
backend/backend/scripts/: demo.py
backend/data/: process_management.db
backend/tests/: conftest.py  test_db_setup.py  test_endpoints.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.vue  main.ts
frontend/src/assets/: base.css
frontend/src/components/: EventCard.vue  EventForm.vue  NavigationBar.vue  ProcessCard.vue  ProcessForm.vue  ProcessTable.vue
frontend/src/router/: routes.ts
frontend/src/types/: api.ts
frontend/src/views/: FusedView.vue  HomeView.vue  RecordView.vue  VisualizeView.vue
